tests/invalid/set_clear_wrong_arg_count/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    s.clear(1)


if __name__ == "__main__":
    run_case()
